<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="16dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    app:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="350dp">

        <ImageView
            android:id="@+id/ivItemProduct"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/image"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvItemNameProduct"
            style="@style/text_14sp_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:maxLines="2"
            android:text="@string/account_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivItemProduct" />

        <TextView
            android:id="@+id/tvItemPrice"
            style="@style/text_12sp_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/price"
            app:layout_constraintStart_toStartOf="@+id/tvItemNameProduct"
            app:layout_constraintTop_toBottomOf="@+id/tvItemNameProduct" />

        <TextView
            android:id="@+id/tvItemCategoryProduct"
            style="@style/text_12sp_reguler_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/green"
            android:drawableStart="@drawable/ic_location"
            android:drawablePadding="4dp"
            android:padding="4dp"
            android:text="@string/category"
            app:drawableTint="@color/white"
            app:layout_constraintStart_toStartOf="@+id/tvItemPrice"
            app:layout_constraintTop_toBottomOf="@+id/tvItemPrice" />

        <TextView
            android:id="@+id/tvItemRatingProduct"
            style="@style/text_12sp_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/yellow"
            android:drawableStart="@drawable/ic_star"
            android:drawablePadding="4dp"
            android:padding="4dp"
            android:text="@string/rating"
            app:drawableTint="@color/black"
            app:layout_constraintStart_toStartOf="@+id/tvItemCategoryProduct"
            app:layout_constraintTop_toBottomOf="@+id/tvItemCategoryProduct" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>