<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cvFavoriteBatik"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    app:cardCornerRadius="20dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivItemFavBatik"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/image" />

        <TextView
            android:id="@+id/tvItemNameFavBatik"
            style="@style/text_18sp_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/batik_name"
            app:layout_constraintStart_toEndOf="@+id/ivItemFavBatik"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvItemIdFavBatik"
            style="@style/text_14sp_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/batik_id"
            app:layout_constraintStart_toStartOf="@+id/tvItemLocationFavBatik"
            app:layout_constraintTop_toBottomOf="@+id/tvItemLocationFavBatik" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnItemFavBatik"
            style="@style/btn_favorite_icon"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:rippleColor="@color/white" />

        <TextView
            android:id="@+id/tvItemLocationFavBatik"
            style="@style/text_14sp_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/batik_location"
            app:layout_constraintStart_toStartOf="@+id/tvItemNameFavBatik"
            app:layout_constraintTop_toBottomOf="@+id/tvItemNameFavBatik" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>