<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginBottom="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginLeft="16dp"
    android:stateListAnimator="@null"
    card_view:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="false"
        android:padding="16dp">

        <ImageView
            android:id="@+id/ivArticle"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/image"
            android:cropToPadding="false"
            android:scaleType="centerCrop"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/tvDateArticle"
            card_view:srcCompat="@drawable/img_dummy" />

        <TextView
            android:id="@+id/tvDateArticle"
            style="@style/text_10sp_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:text="@string/article_date"
            card_view:drawableStartCompat="@drawable/ic_calendar"
            card_view:drawableTint="@color/black"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitleArticle"
            style="@style/text_16sp_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/article_title"
            card_view:layout_constraintStart_toStartOf="@+id/ivArticle"
            card_view:layout_constraintTop_toBottomOf="@+id/ivArticle" />

        <TextView
            android:id="@+id/tvWriterArticle"
            style="@style/text_10sp_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/writer"
            android:textColor="@color/grey_700"
            android:textColorLink="#FFFFFF"
            card_view:layout_constraintStart_toStartOf="@+id/tvTitleArticle"
            card_view:layout_constraintTop_toBottomOf="@+id/tvTitleArticle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnFavArticle"
            style="@style/btn_favorite_icon"
            android:layout_marginEnd="8dp"
            card_view:layout_constraintBottom_toBottomOf="@+id/tvWriterArticle"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="@+id/tvTitleArticle" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>