<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvMiniBatik"
    android:layout_width="121dp"
    android:layout_height="121dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="8dp"
    android:clickable="true"
    android:focusable="true"
    app:cardCornerRadius="20dp"
    app:cardElevation="5dp"
    app:cardPreventCornerOverlap="false">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_image_corner"
        android:padding="0dp">

        <ImageView
            android:id="@+id/ivItemBatik"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/image"
            android:scaleType="centerCrop" />


        <eightbitlab.com.blurview.BlurView
            android:id="@+id/blurry"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            app:blurOverlayColor="#4D777D81">

            <TextView
                android:id="@+id/tvItemNameBatik"
                style="@style/text_12sp_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/batik_name"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tvItemLocationBatik"
                style="@style/text_10sp_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="8dp"
                android:text="@string/batik_location"
                android:textColor="@color/white" />
        </eightbitlab.com.blurview.BlurView>
    </FrameLayout>
</androidx.cardview.widget.CardView>