<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginEnd="16dp"
    android:stateListAnimator="@null"
    card_view:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="false"
        android:padding="16dp">

        <ImageView
            android:id="@+id/ivItemArticle"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/image"
            android:cropToPadding="false"
            android:scaleType="centerCrop"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:srcCompat="@drawable/img_dummy" />

        <TextView
            android:id="@+id/tvItemTitleArticle"
            style="@style/text_16sp_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/article_title"
            card_view:layout_constraintStart_toEndOf="@+id/ivItemArticle"
            card_view:layout_constraintTop_toTopOf="@+id/ivItemArticle" />

        <TextView
            android:id="@+id/tvItemWriterArticle"
            style="@style/text_12sp_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/writer"
            android:textColor="@color/grey_700"
            android:textColorLink="#FFFFFF"
            card_view:layout_constraintBottom_toBottomOf="@+id/ivItemArticle"
            card_view:layout_constraintStart_toStartOf="@+id/tvItemTitleArticle"
            card_view:layout_constraintTop_toBottomOf="@+id/tvItemTitleArticle" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>